fix: change alignment on photo to be centered

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,8 +189,8 @@ pre {
 .p-author{
   display: flex;
   flex-direction: row;
+  align-items: center;
   flex: auto;
-  padding-top: 5px;
 }
 
 .u-photo{
